adjust style to ensure elements surrounding main window are fixed and main window scrolls behind the fixed elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@
     font-family: "orpheuspro", "Lora", serif;
     font-weight: 420;
     font-size: 380%;
+    width: 85%;
 }
 
 #logo, #socials {
@@ -29,7 +30,8 @@ a {
 }
 
 #socials {
-    margin-right: 30px;
+    position: fixed;
+    margin: 0 0 0 85%;
 }
 
 #socials>li {
@@ -52,7 +54,7 @@ a {
     clear: both;
     position: fixed;
     float: left;
-    width: 20%;
+    width: 10%;
     margin-top: 130px;
     margin-left: 30px;
     font-family: "orpheuspro", "Lora", serif;
@@ -75,19 +77,21 @@ a {
 
 /* Main */
 #main-window {
-    position: fixed;
-    /* float: right; */
+    position: relative;
+    float: right;
     /* margin: 200px; */
-    /* margin-top: 130px; */
-    margin: 7% 10%;
+    margin-top: 130px;
+    margin-left: 10%;
+    margin-right: 10%;
     border: 1px solid #000;
-    width: 80%;
+    width: 70%;
     background-color: #bfd2bf;
     font-family: "Karla", "Verdana", sans-serif;
     font-weight: 400;
     font-size: 1.5rem;
     text-align: center;
-    overflow-y: scroll;
+    z-index: -1;
+    /* overflow-y: scroll; */
 }
 
 /* Footer */
